[package]
name = "dioxus-query"
description = "Fully-typed, async, reusable cached state management for Dioxus 🧬"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/marc2332/dioxus-query"
repository = "https://github.com/marc2332/dioxus-query"
keywords = ["dioxus", "async", "state", "synchronization"]
categories = ["gui", "asynchronous"]

[dependencies]
dioxus-query-macro = { path = "./dioxus-query-macro" }
dioxus-lib = { version = "0.6", default-features = false, features = [
    "macro",
    "hooks",
    "signals",
] }
futures-util = "0.3.28"
warnings = "0.2.1"
tokio = { version = "^1", features = ["sync", "time"] }

[dev-dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "^1", features = ["time"] }
