[package]
name = "dioxus-query"
description = "Fully-typed, async, reusable cached state management for Dioxus 🧬"
version = "0.9.1"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "./README.md"
homepage = "https://github.com/marc2332/dioxus-query"
repository = "https://github.com/marc2332/dioxus-query"
keywords = ["dioxus", "async", "state", "synchronization"]
categories = ["gui", "asynchronous"]

[dependencies]
dioxus = { version = "0.7.0", default-features = false, features = ["macro", "hooks", "signals"] }
dioxus-core = { version = "0.7.0", default-features = false }
futures-util = "0.3.28"
tokio = { version = "^1", features = ["sync", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmtimer = "0.4.1"
web-time = "1.1.0"
tokio = { version = "^1", features = ["sync"] }

[dev-dependencies]
dioxus = { version = "0.7.0", features = ["desktop"] }
tokio = { version = "^1", features = ["time"] }
